logs/dag_id=artis_revenue/run_id=manual__2023-09-10T120802.895027+0000/task_id=insert_into_artist_revenue/attempt=1.log
[2023-09-10T12:08:04.331+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: artis_revenue.insert_into_artist_revenue manual__2023-09-10T12:08:02.895027+00:00 [queued]>
[2023-09-10T12:08:04.336+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: artis_revenue.insert_into_artist_revenue manual__2023-09-10T12:08:02.895027+00:00 [queued]>
[2023-09-10T12:08:04.336+0000] {taskinstance.py:1361} INFO - Starting attempt 1 of 2
[2023-09-10T12:08:04.347+0000] {taskinstance.py:1382} INFO - Executing <Task(GenericTransfer): insert_into_artist_revenue> on 2023-09-10 12:08:02.895027+00:00
[2023-09-10T12:08:04.352+0000] {standard_task_runner.py:57} INFO - Started process 2969 to run task
[2023-09-10T12:08:04.354+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'artis_revenue', 'insert_into_artist_revenue', 'manual__2023-09-10T12:08:02.895027+00:00', '--job-id', '91', '--raw', '--subdir', 'DAGS_FOLDER/artist_revenue.py', '--cfg-path', '/tmp/tmp6kvq4d4g']
[2023-09-10T12:08:04.356+0000] {standard_task_runner.py:85} INFO - Job 91: Subtask insert_into_artist_revenue
[2023-09-10T12:08:04.385+0000] {task_command.py:415} INFO - Running <TaskInstance: artis_revenue.insert_into_artist_revenue manual__2023-09-10T12:08:02.895027+00:00 [running]> on host 80a7ead3f1b6
[2023-09-10T12:08:04.439+0000] {taskinstance.py:1660} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='Aditiya Rahman' AIRFLOW_CTX_DAG_ID='artis_revenue' AIRFLOW_CTX_TASK_ID='insert_into_artist_revenue' AIRFLOW_CTX_EXECUTION_DATE='2023-09-10T12:08:02.895027+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-09-10T12:08:02.895027+00:00'
[2023-09-10T12:08:04.445+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-09-10T12:08:04.450+0000] {base.py:73} INFO - Using connection ID 'datawarehouse' for task execution.
[2023-09-10T12:08:04.451+0000] {generic_transfer.py:77} INFO - Extracting data from postgres
[2023-09-10T12:08:04.451+0000] {generic_transfer.py:78} INFO - Executing: 
 
SELECT a."ArtistId", 
       a."Name", 
       b."Title", 
       c."Name", 
       (d."Quantity" * d."UnitPrice"),
       d."InvoiceLineId",
       e."InvoiceId",
       e."InvoiceDate"
FROM "Artist" a
JOIN "Album" b
ON a."ArtistId" = b."ArtistId"
JOIN "Track" c
ON b."AlbumId" = c."AlbumId"
JOIN "InvoiceLine" d
ON c."TrackId" = d."TrackId"
JOIN "Invoice" e
ON d."InvoiceId" = e."InvoiceId"
[2023-09-10T12:08:04.455+0000] {base.py:73} INFO - Using connection ID 'postgres' for task execution.
[2023-09-10T12:08:04.457+0000] {sql.py:418} INFO - Running statement: 
SELECT a."ArtistId", 
       a."Name", 
       b."Title", 
       c."Name", 
       (d."Quantity" * d."UnitPrice"),
       d."InvoiceLineId",
       e."InvoiceId",
       e."InvoiceDate"
FROM "Artist" a
JOIN "Album" b
ON a."ArtistId" = b."ArtistId"
JOIN "Track" c
ON b."AlbumId" = c."AlbumId"
JOIN "InvoiceLine" d
ON c."TrackId" = d."TrackId"
JOIN "Invoice" e
ON d."InvoiceId" = e."InvoiceId", parameters: None
[2023-09-10T12:08:04.462+0000] {sql.py:427} INFO - Rows affected: 2240
[2023-09-10T12:08:04.466+0000] {generic_transfer.py:95} INFO - Running preoperator
[2023-09-10T12:08:04.466+0000] {generic_transfer.py:96} INFO - ['\nDROP TABLE IF EXISTS artist_revenue\n# ', '\nCREATE TABLE "artist_revenue" (\n    "ArtistId" INT NOT NULL,\n    "ArtistName" VARCHAR(120),\n    "AlbumTitle" VARCHAR(160) NOT NULL,\n    "TrackName" VARCHAR(200) NOT NULL,\n    "TotalPrice" NUMERIC(10,2) NOT NULL,\n    "InvoiceLineId" INT NOT NULL,\n    "InvoiceId" INT NOT NULL,\n    "InvoiceDate" TIMESTAMP NOT NULL\n);']
[2023-09-10T12:08:04.471+0000] {base.py:73} INFO - Using connection ID 'datawarehouse' for task execution.
[2023-09-10T12:08:04.473+0000] {sql.py:418} INFO - Running statement: 
DROP TABLE IF EXISTS artist_revenue
# , parameters: None
[2023-09-10T12:08:04.474+0000] {taskinstance.py:1943} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/operators/generic_transfer.py", line 97, in execute
    run(self.preoperator)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "#"
LINE 3: # 
        ^

[2023-09-10T12:08:04.479+0000] {taskinstance.py:1400} INFO - Marking task as UP_FOR_RETRY. dag_id=artis_revenue, task_id=insert_into_artist_revenue, execution_date=20230910T120802, start_date=20230910T120804, end_date=20230910T120804
[2023-09-10T12:08:04.489+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 91 for task insert_into_artist_revenue (syntax error at or near "#"
LINE 3: # 
        ^
; 2969)
[2023-09-10T12:08:04.526+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-09-10T12:08:04.544+0000] {taskinstance.py:2784} INFO - 0 downstream tasks scheduled from follow-on schedule check
